@startuml
class Consumer
class ConsumerAddresses

class Grower
class Hive
class Deliverer


class DeliveryAddress

Together {
class Order
class OrderLine {
    - productId
    - quantity
    - price
}
class Product
class Invoice {
    - number
    - fileName
    - invoiceLines
    - totalAmount
}

class InvoiceLine {
    - productDescription
    - quantity
    - price
}

}

Together {
class DeliveryAddress
class Deliverer
}

Consumer *-- ConsumerAddresses
Grower o-- Hive

Order *-- OrderLine

Hive o-- Product

Order *-- Invoice

OrderLine *-- Product

Consumer -- Order

Grower -- Order

Order *-- DeliveryAddress

Deliverer *-- DeliveryAddress




@enduml